welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:13: error: not found: value baisseBrossse
  baisseBrossse()
  ^PictureMono1:19: error: not found: value baisseBrossse
  baisseBrossse()
  ^