welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def faireV () {
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  baisseBrossse()
  leveBrosse()
  avance()
  droite()
  avance()
  gauche()
  baisseBrossse()
  leveBrosse()
  avance()
  avance()
  gauche()
}

for (i<- 1 to 4 ){
  faireV()
}

